# Vulkan-Renderer-Template

./: CMakeLists.txt  README.md  imgui.ini
src/: main.cpp
src/Engine/: Buffer.hpp  Core.hpp  CoreImpl.hpp  DescriptorAllocator.hpp  DescriptorCache.hpp  Descriptors.hpp  DynamicRenderPass.hpp  EngineInclude.hpp  Image.hpp  ImageShipper.hpp  ImageView.hpp  Pipeline.hpp  PresentQueue.hpp  RenderGraph.hpp  ResourcesManager.hpp  Sampler.hpp  ShaderModule.hpp  ShaderParser.hpp  StagedBuffer.hpp  Structs.hpp  SwapChain.hpp  SyncronizationPatterns.hpp  UtilVk.hpp
src/Renderers/: BaseRenderer.hpp  RendererStructs.hpp  RenderersInclude.hpp
src/Renderers/Examples/: ComputeRenderer.hpp  ForwardRenderer.hpp
src/Renderers/Graphics/: ForwardRenderer.hpp
src/Rendering/: BaseRenderer.hpp  ImguiRenderer.hpp  RendererStructs.hpp  RenderingInclude.hpp
src/Rendering/Examples/: ComputeRenderer.hpp  ForwardRenderer.hpp
src/Rendering/RThings/: Camera.hpp  Model.hpp  ModelLoader.hpp
src/Shaders/: compile.bat
src/Shaders/glsl/Base/: test.frag  test.vert
src/Shaders/glsl/Examples/: cSample.comp  fSample.frag  fSample.vert
src/Shaders/spirv/Base/: test.frag.spv  test.vert.spv
src/Shaders/spirv/Examples/: cSample.comp.spv  fSample.frag.spv  fSample.vert.spv
src/Systems/: InputSystem.hpp  OS.hpp  ObserverSystem.hpp  SystemsInclude.hpp
src/VulkanAPI/: Buffer.hpp  Core.hpp  CoreImpl.hpp  DescriptorAllocator.hpp  Descriptors.hpp  DynamicRenderPass.hpp  EngineInclude.hpp  Image.hpp  ImageView.hpp  Instance.hpp  Pipeline.hpp  PresentQueue.hpp  RenderGraph.hpp  Sampler.hpp  ShaderModule.hpp  StagedBuffer.hpp  Structs.hpp  Surface.hpp  SwapChain.hpp  SyncronizationPatterns.hpp  UtilVk.hpp  VertexInput.hpp
src/WindowAPI/: WindowInclude.hpp  WindowProvider.hpp
